--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,2 +1,8 @@
-<h1>Messages#index</h1>
-<p>Find me in app/views/messages/index.html.erb</p>
+<div class="wrapper">
+  <div class="side_container">
+    <%= render "side_bar" %>
+  </div>
+  <div class="main_container">
+    <%= render "main_chat" %>
+  </div>
+</div>
