サイドバーのフロント実装

--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -2,30 +2,64 @@
   display: flex;
 }
 
-.side_container {
+.side-container {
   background-color: #253141;
   height: 100vh;
   width: 300px;
 }
 
-.side_header {
+.side-header {
+  background-color: #253141;
   height: 100px;
   padding: 0 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.user-name {
+}
+
+.user-name-btn {
+  color: #fafafa;
+  font-size: 16px;
+  text-decoration: none;
+}
+
+.create-chat {
+  font-size: 10px;
+}
+
+.new-chat-btn {
+  color: deepskyblue;
+  border: 1px solid lightblue;
+  padding: 14px;
+  text-decoration: none;
 }
 
 .rooms {
   background-color: #2f3e51;
   height: calc( 100vh - 100px);
   padding: 0 20px;
+  overflow: scroll;
 }
 
-.main_container {
+.room-name {
+  padding: 20px 0 40px;
+}
+
+.chat-room-btn {
+  color: white;
+  text-decoration: none;
+}
+
+.main-container {
   background-color: #ffffff;
   height: 100vh;
   width: calc(100% - 300px);
 }
 
-.main_header {
+.main-header {
   height: 100px;
   padding: 0 40px;
 }
