--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,8 +1,8 @@
 <div class="wrapper">
-  <div class="side_container">
+  <div class="side-container">
     <%= render "side_bar" %>
   </div>
-  <div class="main_container">
+  <div class="main-container">
     <%= render "main_chat" %>
   </div>
 </div>
