--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -1,17 +1,17 @@
 <div class="side-header">
   <div class="user-name">
-    <%= link_to "Yosuke", "#" %>
+    <%= link_to "Yosuke", "#", class: "user-name-btn" %>
   </div>
   <div class="create-chat">
-    <%= link_to "チャットを作成する", "#" %>
+    <%= link_to "チャットを作成する", "#", class: "new-chat-btn" %>
   </div>
 </div>
 <div class="rooms">
   <div class="room-name">
-    <%= link_to "techroom1", "#" %>
+    <%= link_to "techroom1", "#", class: "chat-room-btn" %>
   </div>
   <div class="room-name">
-    <%= link_to "techroom2", "#" %>
+    <%= link_to "techroom2", "#", class: "chat-room-btn" %>
   </div>
 
 </div>
