--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,40 +1,6 @@
-<div class="main-header">
-  <div class="left-header">
-    <div class="group-name">
-     hugehuga
-    </div>
-  </div>
-  <div class="right-header">
-    <div class="finish-chat">
-      <%= link_to "チャットを終了する", "#" %>
-    </div>
-  </div>
+<div class="main_header">
 </div>
 <div class="messages">
-  <div class="message-box">
-    <div class="message-info">
-      <div class="meaage-user-name">Yosuke</div>
-      <div class="created-at">2020/03/31/(Wed) 12:43:30</div>
-    </div>
-    <div class="message-coment">おはよう</div>
-  </div>
-  <div class="message-box">
-    <div class="message-info">
-      <div class="meaage-user-name">Yosuke</div>
-      <div class="created-at">2020/03/31/(Wed) 12:46:30</div>
-    </div>
-    <div class="message-content">
-      <div class="message-coment">こんばんは</div>
-    </div>
-  </div>
 </div>
-<%= form_with url: "#", class: "form" do |form|%>
-  <div class="form-input">
-    <%= form.text_field :coment, placeholder: "type a message", class: "form-message" %>
-    <label class="form-image">
-      <span class="image-file">画像</span>
-      <input type="file" class="hidden">
-    </label>
-  </div>
-  <%= form.submit "送信", class: "form-submit" %>
-<% end %>
+<div class="form">
+</div>
