ユーザー情報表示の実装

--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -1,6 +1,6 @@
 <div class="side-header">
   <div class="user-name">
-    <%= link_to "Yosuke", "#" %>
+    <%= link_to current_user.name , edit_user_path(current_user) %>
   </div>
   <div class="create-chat">
     <%= link_to "チャットを作成する", "#" %>
