--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -30,7 +30,7 @@
 </div>
 <%= form_with model: [@room, @message], html: {class: "form"}, local: true do |f|%>
   <div class="form-input">
-    <%= f.text_field :coment, placeholder: "type a message", class: "form-message" %>
+    <%= f.text_field :content, placeholder: "type a message", class: "form-message" %>
     <label class="form-image">
       <span class="image-file">画像</span>
       <%= f.file_field :image, class: 'hidden' %>
