--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -11,22 +11,7 @@
   </div>
 </div>
 <div class="messages">
-  <div class="message-box">
-    <div class="message-info">
-      <div class="meaage-user-name">Yosuke</div>
-      <div class="created-at">2020/03/31/(Wed) 12:43:30</div>
-    </div>
-    <div class="message-coment">おはよう</div>
-  </div>
-  <div class="message-box">
-    <div class="message-info">
-      <div class="meaage-user-name">Yosuke</div>
-      <div class="created-at">2020/03/31/(Wed) 12:46:30</div>
-    </div>
-    <div class="message-content">
-      <div class="message-coment">こんばんは</div>
-    </div>
-  </div>
+  <%= render partial: 'message', collection: @messages %>
 </div>
 <%= form_with model: [@room, @message], html: {class: "form"}, local: true do |f|%>
   <div class="form-input">
