チャットルーム名の表示

--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,7 +1,7 @@
 <div class="main-header">
   <div class="left-header">
     <div class="group-name">
-     hugehuga
+      <%= @room.name %>
     </div>
   </div>
   <div class="right-header">
